<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <TextView
        android:id="@+id/txtLevelTitleEndGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp"
        android:text="@string/difficulty_level"
        android:textColor="@color/text_color"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txtLevelEndGame"
        app:layout_constraintEnd_toEndOf="@+id/txtEndGameTitle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/txtEndGameTitle"
        app:layout_constraintTop_toBottomOf="@+id/txtTimerEndGame" />

    <TextView
        android:id="@+id/txtLevelEndGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/default_number"
        android:textColor="@color/text_color"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtEndGameTitle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/txtEndGameTitle"
        app:layout_constraintTop_toBottomOf="@+id/txtLevelTitleEndGame" />

    <TextView
        android:id="@+id/txtTimerTitleEndGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp"
        android:text="@string/time_spent"
        android:textColor="@color/text_color"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txtTimerEndGame"
        app:layout_constraintEnd_toEndOf="@+id/txtEndGameTitle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/txtEndGameTitle"
        app:layout_constraintTop_toBottomOf="@+id/txtPointsEndGame" />

    <TextView
        android:id="@+id/txtTimerEndGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="25dp"
        android:text="@string/default_timer"
        android:textColor="@color/text_color"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txtLevelTitleEndGame"
        app:layout_constraintEnd_toEndOf="@+id/txtEndGameTitle"
        app:layout_constraintStart_toStartOf="@+id/txtEndGameTitle"
        app:layout_constraintTop_toBottomOf="@+id/txtTimerTitleEndGame" />

    <TextView
        android:id="@+id/txtEndGameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_over"
        android:textColor="@color/text_color"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079" />

    <TextView
        android:id="@+id/txtPointsTitleEndGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/your_points"
        android:textColor="@color/text_color"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txtPointsEndGame"
        app:layout_constraintEnd_toEndOf="@+id/txtEndGameTitle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/txtEndGameTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/txtPointsEndGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="25dp"
        android:text="@string/default_number"
        android:textColor="@color/text_color"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txtTimerTitleEndGame"
        app:layout_constraintEnd_toEndOf="@+id/txtEndGameTitle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/txtEndGameTitle"
        app:layout_constraintTop_toBottomOf="@+id/txtPointsTitleEndGame" />
</androidx.constraintlayout.widget.ConstraintLayout>